# elbereth

./: README.md
calc/: NEWS  README  configure  configure.ac
calc/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
calc/src/: Makefile.am  Makefile.in  calc.cpp  fib.cpp  tokens.cpp
count-change/: AUTHORS  Makefile.in  NEWS  README  configure  configure.ac
count-change/src/: Makefile.am  Makefile.in  count-change.c
primes/primes/: __init__.py  plot.py
primes/tests/: __init__.py
spam/: Makefile.am  Makefile.in  NEWS  README  configure  configure.ac
spam/include/: Makefile.am  Makefile.in  spam.h
spam/spam/: Makefile.am  Makefile.in  spam.c
